settings: added faker and numpy to dev dependencies

--- a/settings.ini
+++ b/settings.ini
@@ -41,5 +41,5 @@ requirements = vocos speechbrain<1.0 \
                torch>=2 torchaudio soundfile
 dev_requirements = vector_quantize_pytorch==1.6.22 openai-whisper webdataset wandb \
 		   whisperx@git+https://github.com/m-bain/whisperx.git \
-		   whisper_normalizer jiwer \
+		   whisper_normalizer jiwer faker numpy \
 		   matplotlib pandas pyarrow scikit-learn ipython
